# Arithmetic_Expression_Evaluator

./: .gitignore  Arithmetic-Expression-Evaluator.cabal  BUG_FIXES_DOCUMENTATION.md  CHANGELOG.md  EDGE_CASES_DOCUMENTATION.md  ENHANCEMENTS_APPLIED.md  LICENSE  MODULAR_STRUCTURE.md  README.md  TEST_REPORT.md  test.sh
.claude/: settings.local.json
Arithmetic_Expression_Evaluator/: Evaluator.hs  evaluator.cabal
Arithmetic_Expression_Evaluator/src/: Main.hs
Arithmetic_Expression_Evaluator/src.backup/Expr/: Evaluator.hs  Tokenizer.hs  Types.hs
Arithmetic_Expression_Evaluator/src/Expr/: Evaluator.hs  Parser.hs  Tokenizer.hs
app/: Main.hs
src/: Evaluator.hs  Parser.hs  Tokenizer.hs
test/: Main.hs
