cabal-version:      2.4
name:               evaluator
version:            1.0.0
synopsis:           Arithmetic expression evaluator with proper error handling
description:        A command-line calculator that supports basic arithmetic,
                    decimals, negative numbers, and parentheses.
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
category:           Math
build-type:         Simple

executable evaluator
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:    Expr.Types
                    , Expr.Tokenizer
                    , Expr.Parser
                    , Expr.Evaluator
    build-depends:    base >=4.17 && <5
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables
    ghc-options:      -Wall -O2
